--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -1,4 +1,4 @@
-<div class="cms-page">
+<div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
 	<div class="cms-page-content"><?=$page->text?></div>
 </div>
