Add category url into page id

--- a/view/atp-cms/index/category.phtml
+++ b/view/atp-cms/index/category.phtml
@@ -1,4 +1,4 @@
-<div id="cms-category">
+<div class="cms-category" id="cms-category-<?=$category->url?>">
 	<h1><?=$category->name?></h1>
 	
 	<ul class="cms-page-list">
