--- a/view/atp-cms/index/category.phtml
+++ b/view/atp-cms/index/category.phtml
@@ -1,3 +1,5 @@
+<?php $this->breadcrumbs($category->name, $this->basePath . "/cms/category/" . $category->url) ?>
+
 <div class="cms-category" id="cms-category-<?=$category->url?>">
 	<h1><?=$category->name?></h1>
 	
