--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -1,3 +1,6 @@
+<?php $this->breadcrumbs($page->title, $this->basePath . $page->url) ?>
+<?php if($page->category) {$this->breadcrumbs($page->category->name, $this->basePath() . "cms/category/" . $page->category->url);} ?>
+
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
 	<div class="cms-page-content"><?=$page->text?></div>
