--- a/view/atp-cms/index/category.phtml
+++ b/view/atp-cms/index/category.phtml
@@ -1,3 +1,4 @@
+<?php $this->pageType("cms-category")?>
 <?php $this->breadcrumbs($category->name, $this->basePath . "/cms/category/" . $category->url) ?>
 
 <div class="cms-category" id="cms-category-<?=$category->url?>">
