--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -1,3 +1,4 @@
+<?php $this->pageType("cms-page")?>
 <?php $this->breadcrumbs($page->title, $this->basePath . $page->url) ?>
 <?php if($page->category->name) {$this->breadcrumbs($page->category->name, $this->basePath() . "cms/category/" . $page->category->url);} ?>
 
