--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -1,6 +1,6 @@
 <?php $this->pageType("cms-page")?>
 <?php $this->breadcrumbs($page->title, $this->basePath . $page->url) ?>
-<?php if($page->category->name) {$this->breadcrumbs($page->category->name, $this->basePath() . "cms/category/" . $page->category->url);} ?>
+<?php if($page->category->name && $page->category->isViewable) {$this->breadcrumbs($page->category->name, $this->basePath() . "cms/category/" . $page->category->url);} ?>
 
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
