Add placeholder to cms category items without thumbnails

--- a/view/atp-cms/index/category.phtml
+++ b/view/atp-cms/index/category.phtml
@@ -9,7 +9,15 @@
 		<?php foreach($category->pageList as $page) { ?>
 			<?php if($page->isActive) { ?>
 				<li>
-					<a href="<?=$this->basePath()?>/<?=$page->url?>"><img src="<?=$this->basePath() . $page->filePath('thumbnail')?>" alt="<?=$page->title?>"/></a>
+					<a href="<?=$this->basePath()?>/<?=$page->url?>">
+						<?php if($page->thumbnail->exists()) { ?>
+							<div class="item-thumb">
+								<img src="<?=$this->basePath() . $page->filePath('thumbnail')?>" alt="<?=$page->title?>"/>
+							</div>
+						<?php } else { ?>
+							<div class="item-thumb no-thumb"></div>
+						<?php } ?>
+					</a>
 					<h2><a href="<?=$this->basePath()?>/<?=$page->url?>"><?=$page->title?></a></h2>
 					<div class="cms-page-preview">
 						<?=$page->preview?>
