--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -11,3 +11,11 @@
 	<h1><?=$page->title?></h1>
 	<div class="cms-page-content"><?=$page->text?></div>
 </div>
+
+<style type="text/css">
+	<?=$page->extraCss?>
+</style>
+
+<script type="text/javascript">
+	<?=$page->script?>
+</script>
