--- a/view/atp-cms/index/page.phtml
+++ b/view/atp-cms/index/page.phtml
@@ -9,7 +9,7 @@
 
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
-	<div class="cms-page-content"><?=$page->text?></div>
+	<div class="cms-page-content"><?=$page->textHtml?></div>
 </div>
 
 <style type="text/css">
