--- a/public/atp-cms/css/cms.less
+++ b/public/atp-cms/css/cms.less
@@ -23,3 +23,10 @@ div.cms-page {
 		.buffered;
 	}
 }
+
+div.captioned-image {
+	border: solid 2px @ll; display: inline-block; background: @ll; padding-top: @gutterWidth;
+	img {display: block; margin: auto; .spaced(1);}
+	span {display: block; background: @hl; .buffered;}
+	
+}
