--- a/view/atp-cms/widget/page.phtml
+++ b/view/atp-cms/widget/page.phtml
@@ -10,6 +10,7 @@
 
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
+	<p class="cms-post-date"><?=date($this->siteParam('cms-date-format'), strtotime($page->postDate))?></p>
 	<div class="cms-page-content"><?=$page->contentHtml?></div>
 </div>
 
