Update css file path

--- a/view/atp-cms/widget/page.phtml
+++ b/view/atp-cms/widget/page.phtml
@@ -1,4 +1,4 @@
-<?php $this->appendCss("/atp-cms/css/cms.less")?>
+<?php $this->appendCss("/css/atp-cms/cms.less")?>
 
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
