--- a/view/atp-cms/widget/page.phtml
+++ b/view/atp-cms/widget/page.phtml
@@ -2,7 +2,9 @@
 
 <div class="cms-page" id="cms-page-<?=$page->url?>">
 	<h1><?=$page->title?></h1>
-	<p class="cms-post-date"><?=date($this->siteParam('cms-date-format'), strtotime($page->postDate))?></p>
+	<?php if($this->siteParam('cms-show-post-date') && $page->hasPostDate()) { ?>
+        <p class="cms-post-date"><?=date($this->siteParam('cms-date-format'), strtotime($page->postDate))?></p>
+    <?php } ?>
 	<div class="cms-page-content"><?=$page->contentHtml?></div>
 </div>
 
