--- a/view/atp-cms/widget/post-list.phtml
+++ b/view/atp-cms/widget/post-list.phtml
@@ -1,28 +1,31 @@
 <?php $this->appendCss("/css/atp-cms/cms.less")?>
 
 <div class="cms-page-list">
-	<?php foreach($category->mostRecent($postCount) as $page) { ?>
-		<?php if($page->isActive) { ?>
-			<div class="cms-item">
-				<a href="<?=$this->url('cms_page', array('page' => $page->url))?>">
-					<?php if($page->thumbnailFile->exists()) { ?>
-						<div class="item-thumb">
-							<img src="<?=$this->basePath() . $page->filePath('thumbnailFile')?>" alt="<?=$page->title?>"/>
-						</div>
-					<?php } else { ?>
-						<div class="item-thumb no-thumb"></div>
-					<?php } ?>
-				</a>
-				<h2><a href="<?=$this->url('cms_page', array('page' => $page->url))?>">
-					<?=$page->title?>
-				</a></h2>
-				<div class="cms-page-preview">
-					<?=(strlen($page->previewHtml) > 0) ? $page->previewHtml : ""?>
-				</div>
-                <?php if($this->siteParam('cms-show-list-dates') && $page->hasPostDate()) { ?>
-                    <div class="cms-post-date"><?=date("F j, Y", strtotime($page->postDate))?></div>
-                <?php } ?>
-			</div>
-		<?php } ?>
-	<?php } ?>
+    <div class="cms-page-list-content">
+        <h1><?=$category->name?></h1>
+        <?php foreach($category->mostRecent($postCount) as $page) { ?>
+            <?php if($page->isActive) { ?>
+                <div class="cms-item">
+                    <a href="<?=$this->url('cms_page', array('page' => $page->url))?>">
+                        <?php if($page->thumbnailFile->exists()) { ?>
+                            <div class="item-thumb">
+                                <img src="<?=$this->basePath() . $page->filePath('thumbnailFile')?>" alt="<?=$page->title?>"/>
+                            </div>
+                        <?php } else { ?>
+                            <div class="item-thumb no-thumb"></div>
+                        <?php } ?>
+                    </a>
+                    <h2><a href="<?=$this->url('cms_page', array('page' => $page->url))?>">
+                            <?=$page->title?>
+                        </a></h2>
+                    <div class="cms-page-preview">
+                        <?=(strlen($page->previewHtml) > 0) ? $page->previewHtml : ""?>
+                    </div>
+                    <?php if($this->siteParam('cms-show-list-dates') && $page->hasPostDate()) { ?>
+                        <div class="cms-post-date"><?=date("F j, Y", strtotime($page->postDate))?></div>
+                    <?php } ?>
+                </div>
+            <?php } ?>
+        <?php } ?>
+    </div>
 </div>
